--- a/TestScraping.ipnyb.ipynb
+++ b/TestScraping.ipnyb.ipynb
@@ -611,7 +611,7 @@
    ],
    "source": [
     "df = pd.DataFrame(postData)\n",
-    "df"
+    "df "
    ]
   },
   {
@@ -619,7 +619,14 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "#TO DO \n",
+    "#1. Add Data from Yahoo Finance API to the dataframe\n",
+    "#2. Get the \"buy/sell\" value of that stock for the day\n",
+    "#3. See what happended a day later\n",
+    "#4. Get the Delta between the two values\n",
+    "#5. Use that to create a model that predicts the stock price"
+   ]
   }
  ],
  "metadata": {
